tests/NormalTests/paczka1/small_fuzzy/45104058.err
Error in line 1: Wcq4k9 A466 46,83
Error in line 5: A466 A667 17,6
Error in line 14: A466 A676 86,7
